force-app/main/default/objects/Developer_Allocation__c/fields/Developer__c.field-meta.xml
<CustomField>
    <fullName>Developer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Developer</label>
    <referenceTo>Developer__c</referenceTo>
    <relationshipLabel>Developer Allocations</relationshipLabel>
    <relationshipName>Developer_Allocations</relationshipName>
    <type>Lookup</type>
</CustomField>