force-app/main/default/objects/Developer_Allocation__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Developer Allocations</relationshipLabel>
    <relationshipName>Developer_Allocations</relationshipName>
    <type>Lookup</type>
</CustomField>