force-app/main/default/objects/Developer_Allocation__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Developer Allocations</relationshipLabel>
    <relationshipName>Developer_Allocations</relationshipName>
    <type>Lookup</type>
</CustomField>