force-app/main/default/objects/Developer_Allocation__c/validationRules/AlocacaoEspecialidadeIncompativel.validationRule-meta.xml
<ValidationRule>
    <fullName>AlocacaoEspecialidadeIncompativel</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(	
CONTAINS(	
TEXT( Developer__r.Especialidade__c ), 
TEXT( Opportunity__r.Tecnologia_do_Projeto__c )
)	
)</errorConditionFormula>
    <errorMessage>A especialidade do desenvolvedor deve incluir a Tecnologia do Projeto desta Oportunidade. Por favor, verifique as especialidades do Desenvolvedor.</errorMessage>
</ValidationRule>